# ruster

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SETUP.md  config.toml  spec.md  test.clab.yml
.claude/skills/issue-pr/: SKILL.md
.claude/skills/issue-start/: SKILL.md
.github/workflows/: ci.yml  e2e.yml
examples/: home-router.toml  multi-segment.toml  simple-router.toml
myapp-ebpf/: Cargo.toml
myapp-ebpf/src/: lib.rs  main.rs  mape_nat.rs
packts/: Cargo.toml  README.md
packts/src/: arp.rs  eth.rs  icmp.rs  icmpv6.rs  ipv4.rs  ipv6.rs  lib.rs  tcp.rs  udp.rs  utils.rs
src/: error.rs  lib.rs  main.rs
src/capture/: af_packet.rs  mod.rs
src/config/: mod.rs  types.rs  validation.rs
src/dataplane/: arp_processor.rs  arp_table.rs  conntrack.rs  dhcp6_client.rs  dhcp_client.rs  dhcp_server.rs  dns_forwarder.rs  fdb.rs  filter.rs  firewall.rs  forwarder.rs  mod.rs  napt.rs  ndp_processor.rs  neighbor_table.rs  pbr.rs  pppoe_client.rs  ra_client.rs  ra_server.rs  router.rs  routing.rs
src/protocol/: arp.rs  chap.rs  dhcp.rs  dhcpv6.rs  dns.rs  ethernet.rs  icmp.rs  icmpv6.rs  ipcp.rs  ipv4.rs  ipv6.rs  lcp.rs  mod.rs  pap.rs  ppp.rs  pppoe.rs  tcp.rs  types.rs  udp.rs
src/telemetry/: logging.rs  metrics.rs  mod.rs
tests/: config_cli.rs
tests/clab/: config.toml  topology.yml
tests/clab/home-router/: config.toml  isp-dnsmasq.conf  ruster-dnsmasq.conf  topology.yml
tests/clab/ipv6/: config.toml  topology.yml
tests/clab/switching/: config.toml  topology.yml
tests/e2e/: clab.rs  home_router.rs  ipv6.rs  main.rs  switching.rs
