[package]
name = "ruster"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
libc = "0.2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
