[package]
name = "ruster"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
libc = "0.2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[features]
e2e = []
